fixed - dashboard alignment issue

--- a/src/app/screens/Dashboard/dashboard.css
+++ b/src/app/screens/Dashboard/dashboard.css
@@ -2272,6 +2272,7 @@ height: 100%;
     white-space: nowrap;
     cursor: pointer;
     padding-right: 12px;
+    padding-left: 15px
 }
 
 .DashboardViewFirst .ServicesCalendarWidget:hover span
@@ -2287,9 +2288,10 @@ color:#444444;
 }
 .topProfile .ProfileServicesVisitList .ProfileServicesVisitContent .ProfileViewTime
 {
-    width:30%;
+    width:21%;
     min-width: auto;
     cursor: pointer;
+    text-align: center;
 }
 
 
@@ -2306,10 +2308,10 @@ color:#444444;
     position: absolute;
     background: rgba(140,140,140, 0.3);
     width: 1px;
-    height: 69px;
+    height: 50px;
     left: 99px;
     display: block;
-    top: 0px;
+    top: 10px;
 }
 
 .topProfile .ProfileServicesVisitList .ProfileServicesVisitContent .ProfileCardNameContainer span
@@ -2338,9 +2340,9 @@ color:#444444;
     content: "...";
     position: absolute;
     color: #9f9f9f;
-    left: 4px;
+    left: 0px;
     top: -6px;
-    font-size: 25px;
+    font-size: 24px;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
